--- a/res/layout/third_main.xml
+++ b/res/layout/third_main.xml
@@ -61,7 +61,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/editVk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sheptykin Rostislav"
@@ -82,7 +82,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/editFacebook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sheptykin Rostislav"
@@ -103,7 +103,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/editPhotoes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="500px.com/juki_haruki"
@@ -124,7 +124,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/editSkype"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sheptykin Rostislav"
@@ -145,7 +145,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/editPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="098.296.09.00"
@@ -153,26 +153,7 @@
 
         </TableRow>
         
-        <TableRow
-            android:id="@+id/tableRow6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="mail:"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/textView17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="sheptykin.rostislav@gmail.com"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        </TableRow>
+        
 
     </TableLayout>
 
