--- a/res/layout/back_main.xml
+++ b/res/layout/back_main.xml
@@ -105,22 +105,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:gravity="bottom" >
-
-        <Button
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="1"
-            android:text="previous" />
+        android:gravity="center_horizontal" >
 
         <Button
             android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginRight="19dp"
-            android:layout_weight="1"
             android:text="next" />
 
     </LinearLayout>
