--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,15 +3,6 @@
     android:layout_height="fill_parent"
     android:background="#458577" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/ic_launcher" />
-
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -25,10 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="next" />
-
     </LinearLayout>
 
     <TableLayout
+        android:id="@+id/tableLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
@@ -41,7 +32,8 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/mainName"
+                style="@style/AppBaseTheme"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal"
                 android:text="Sheptykin Rostislav"
@@ -56,12 +48,11 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/mainProffesion"
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
                 android:text="android developer (trainee)"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-
         </TableRow>
 
         <TableRow
@@ -70,14 +61,24 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/mainPhone"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
-                android:text="sheptykin.rostislav@gmail.com"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:text="098.296.09.00"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="15sp" />
 
         </TableRow>
     </TableLayout>
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
+        android:src="@drawable/photo" />
 
 </RelativeLayout>
