--- a/res/layout/edit_back.xml
+++ b/res/layout/edit_back.xml
@@ -25,7 +25,7 @@
             android:gravity="center_horizontal"
             android:text="education:"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="20dp"
+            android:textSize="17dp"
             android:textStyle="italic" />
 
         <EditText
@@ -73,7 +73,7 @@
             android:layout_marginTop="20dp"
             android:text="skills:"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="20dp"
+            android:textSize="17sp"
             android:textStyle="italic" />
 
         <EditText
@@ -117,14 +117,69 @@
             android:textSize="16dp" />
 
     </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/save"
+        android:layout_alignLeft="@id/linearLayout2"
+        android:layout_alignRight="@id/linearLayout2"
+        android:layout_below="@id/linearLayout2"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+        
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center_horizontal"
+             android:layout_marginTop="20dp"
+             android:text="contact&apos;s:"
+             android:textAppearance="?android:attr/textAppearanceMedium"
+             android:textSize="17sp"
+             android:textStyle="italic" />
+
+         <EditText
+             android:id="@+id/editMail"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="sheptykin.rostislav@gmail.com"
+             android:textAppearance="?android:attr/textAppearanceMedium"
+             android:textSize="16dp" />
+
+         <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center_horizontal" >
+             
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="left"
+                 android:layout_marginRight="10dp"
+                 android:text="skype:"
+                 android:textAppearance="?android:attr/textAppearanceMedium"
+                 android:textSize="16dp" />
+
+             <EditText
+                 android:id="@+id/editSkype"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center_horizontal"
+                 android:text="Sheptykin Rostislav"
+                 android:textAppearance="?android:attr/textAppearanceMedium"
+                 android:textSize="16dp" />
+
+         </LinearLayout>
+
+    </LinearLayout>
 
    <Button
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="22dp"
-        android:text="save" />
+       android:id="@+id/save"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:layout_centerHorizontal="true"
+       android:text="save" />
 
 </RelativeLayout>
