--- a/res/layout/edit_main.xml
+++ b/res/layout/edit_main.xml
@@ -4,29 +4,20 @@
      android:background="#458577"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="22dp"
-        android:text="save" />
-
     <EditText
         android:id="@+id/editProffession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:gravity="center_horizontal"
         android:text="proffession"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/editMail"
+        android:id="@+id/editPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editProffession"
@@ -34,7 +25,7 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:text="mail"
+        android:text="phone"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
@@ -48,5 +39,13 @@
         android:text="name"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="save" />
 
 </RelativeLayout>
